--- a/styles.css
+++ b/styles.css
@@ -4,67 +4,29 @@ html {
     font-size: 15px;
 }
 
-.grid-container {
-    display: grid;
-    grid-template-rows: 33vh 15vh 15vh;
-    grid-template-columns: 1fr;
+.container {
+    display: flex;
+    align-items: center;
+    min-height: 98vh;
+    max-width: 300px;
+    margin: 0 auto;
+}
+
+.card{
     background-color: white;
-    border-radius: 20px;
-    align-self: center;
-    margin: 10% 30%;
     box-shadow: 5px 5px 5px grey;
-}
-
-.qr-img {
     border-radius: 20px;
-    justify-self: center;
-    height: auto; 
-    width: auto; 
-    max-width: 100%; 
-    max-height: 100%;
-    margin: 2%;
-
+    padding: 5% 5%;
 }
 
-.qr-text-heading {
-    margin-top: 5%;
-    align-self: center;
+.card img {
+    width: 100%;
+    border-radius: 14px;
+}
+
+.text{
+    padding: auto 0;
     text-align: center;
-    font-weight: 700;
-    font-size: 1.5em;
-    padding: 4%;
-}
-
-.qr-text-content {
-    align-self: center;
-    color: hsl(220, 15%, 55%);
-    text-align: center;
-    font-weight: 400;
-    font-size: 1.2em;
-    padding: 4%;
-}
-
-@media (width < 1000px) {
-    .grid-container {
-        margin: 10% 30%;
-    }
-}
-
-@media (width < 910px) {
-    .grid-container {
-        margin: 10% 20%;
-    }
-}
-
-@media (width < 635px) {
-    .grid-container {
-        margin: 10% 10%;
-    }
-}
-@media (width < 450px) {
-    .grid-container {
-        margin: 10% 0%;
-    }
 }
 
 
